# dataops-agent

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
infra/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/.serena/: project.yml
infra/.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
infra/postgres/: initdb.sql
notebooks/: agent_function_calls.ipynb  test_aiagent.ipynb
src/aiagent/: __init__.py  agent.py  cli.py  config.py  tools.py
