[project]
name = "dataops-agent"
version = "0.1.0"
description = "LangChain-based AI agent playground for data operations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DataOps", email = "devnull@example.com" }]
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.1.17",
    "langchain-huggingface>=0.0.8",
    "langchain-experimental>=0.0.73",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "huggingface-hub>=0.23.0",
    "transformers>=4.39.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.5.5"
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
